tests/errors/validation/type-inside-function.fn
---
Description: Type declared inside a function body
Expected: FN2002
---

type NestTest
{
    fn Outer
    {
        type Illegal
        {
            value: i32
        }
    }
}

type Program
{
    static fn Main -> i32
    {
        return 0
    }
}
